[gd_scene load_steps=5 format=3 uid="uid://7wgtwtfrgyo4"]

[ext_resource type="Script" path="res://scenes/[0]baseScenes/baseNPC.gd" id="1_0p8kp"]
[ext_resource type="JSON" path="res://scenes/thirla/thirla_values.json" id="2_u0jqi"]
[ext_resource type="Texture2D" uid="uid://6fhj22ggcp88" path="res://assets/customers/Lady_Merina_final.png" id="3_64lnt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h321u"]
size = Vector2(355, 556)

[node name="baseNPC" type="Area2D" groups=["customer"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_0p8kp")
npcValues = ExtResource("2_u0jqi")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_64lnt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h321u")

[node name="Objects" type="Area2D" parent="."]
z_index = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
